crates/tych/src/tests/snapshots/def_func_expected_int_last_stmt_2.snap
---
source: crates/tych/src/tests.rs
assertion_line: 369
expression: "(test[1], res)"
---
- "\nfn foo(a: int, b: float) -> int {\n    1.0\n}\n"
- Err: "Function `main::foo` should return type `int32` but last statement is `float`"

