crates/tych/src/tests/snapshots/def_func_extern.snap
---
source: crates/tych/src/tests.rs
assertion_line: 369
expression: "(test[1], res)"
---
- "\nextern fn foo()\n"
- Ok:
    nodes:
      - kind:
          Fn:
            proto:
              name: foo
              args: []
              ret_ty: Void
              is_extern: true
            body: ~

