crates/tych/src/tests/snapshots/def_func_main_antn.snap
---
source: crates/tych/src/tests.rs
assertion_line: 369
expression: "(test[1], res)"
---
- "\nfn main() -> int { }\n"
- Err: "main()'s return value shouldn't be annotated. Found `int32`"

