crates/tych/src/tests/snapshots/def_func_main_void.snap
---
source: crates/tych/src/tests.rs
assertion_line: 370
expression: "(test[1], res)"
---
- "\nfn main() { }\n"
- Ok:
    nodes:
      - kind:
          Fn:
            proto:
              name: main
              args: []
              ret_ty: Void
              is_extern: false
              module: main
            body:
              kind:
                Block:
                  list: []
                  ty: Void

