crates/tych/src/tests/snapshots/for_antn_mismatch_2.snap
---
source: crates/tych/src/tests.rs
assertion_line: 463
expression: "(test[1], res)"
---
- "\nfn foo() {\n    let y: int8 = 2\n    for x: int = y; x < 2; 1 {\n        x\n    }\n}\n"
- Err: "Types don't match in for statement. `x` annotated with `int32` but initial value is `int8`"

