crates/tych/src/tests/snapshots/for_for_shadowing3.snap
---
source: crates/tych/src/tests.rs
assertion_line: 497
expression: "(test[1], res)"
---
- "\nfn foo() -> float {\n    let x: float = 1.0\n    for x: int8 = 1; x < 2; 1 {\n        x\n    }\n    x\n}\n"
- Ok:
    nodes:
      - kind:
          Fn:
            proto:
              name: "main::foo"
              args: []
              ret_ty: Float
              is_extern: false
              module: main
              member_of: ~
            body:
              kind:
                Block:
                  list:
                    - kind:
                        Let:
                          name: x
                          antn: Float
                          init:
                            kind:
                              Lit:
                                value:
                                  Float: 1.0
                                ty: Float
                    - kind:
                        For:
                          start_name: x
                          start_antn: Int8
                          start_expr:
                            kind:
                              Lit:
                                value:
                                  Int8: 1
                                ty: Int8
                          cond_expr:
                            kind:
                              BinOp:
                                op: Lt
                                lhs:
                                  kind:
                                    Ident:
                                      name: x
                                      ty: Int8
                                rhs:
                                  kind:
                                    Lit:
                                      value:
                                        Int8: 2
                                      ty: Int8
                                ty: Bool
                          step_expr:
                            kind:
                              Lit:
                                value:
                                  Int8: 1
                                ty: Int8
                          body:
                            kind:
                              Block:
                                list:
                                  - kind:
                                      Ident:
                                        name: x
                                        ty: Int8
                                ty: Int8
                    - kind:
                        Ident:
                          name: x
                          ty: Float
                  ty: Float

