crates/tych/src/tests/snapshots/for_var_step_mismatch.snap
---
source: crates/tych/src/tests.rs
assertion_line: 497
expression: "(test[1], res)"
---
- "\nfn foo() {\n    let y: int8 = 2\n    for x: int = 1; x < 3; y {\n        x\n    }\n}\n"
- Err: "step type mismatch in for statement. Step is `int8` but `x` is `int32`"

