crates/tych/src/tests/snapshots/ident_unknown_var.snap
---
source: crates/tych/src/tests.rs
assertion_line: 486
expression: "(test[1], res)"
---
- "\nfn foo(x: int) { y }\n"
- Err: "Unknown variable: `y`"

